--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.tgz filter=lfs diff=lfs merge=lfs -text
 *.tar.gz filter=lfs diff=lfs merge=lfs -text
+gpccinstall-4.0.0 filter=lfs diff=lfs merge=lfs -text
